--- a/templates/login.html
+++ b/templates/login.html
@@ -4,36 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: rgb(236, 240, 245);">
     
     <div class="position-absolute top-50 start-50 translate-middle">
         
         <div class="d-flex justify-content-center">
-            <img src="../static/images/logo.png" alt="" class="mb-4" style="height:auto; width:25vh">
+            <img src="../static/images/logo.svg" alt="" class="mb-4" style="height:auto; width:25vh">
         </div>
 
-        <div class="border-top border-5 border-info rounded row">
-            <div class=" border border-top-0 border-2  border-dark border-1 w-100 d-flex flex-column text-center">
-                <span class="my-3">Inicio de sesión</span>
-            </div>
-            <div class="border border-top-0 rounded-bottom border-2 border-dark border-1 w-100" style="width: 32vh;">
-                <div class="">
-                    <div class="input-group my-4">
-                        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="RFC">
-                    </div>
-                    <div class="input-group my-4">
-                        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Contraseña">
-                    </div>
+        <form action="/hola" method="POST">
+
+            <div class="row" >
                 
-                    <div class="flex-column text-center">
-                        <button type="button" class="mb-3 btn btn-info text-light fw-bold">Acceder</button>
-                    </div>
-    
+                <div class="" style="background-color: rgb(60, 141, 188); height:1vh;  border-radius:1vh 1vh 0vh 0vh"></div>
+
+                <div class=" border border-top-0 border-2  border-gray border-1 w-100 d-flex flex-column text-center" style="background-color: white;">
+                    <span class="my-2 fs-4" style="font-family: inria sans;">Inicio de sesión</span>
                 </div>
+                
+                <div class="border border-top-0 rounded-bottom border-2 border-gray-900 border-1 w-100" style="width: 32vh; background-color: white;">
+                    <div class="">
+                        <div class="input-group my-4">
+                            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="RFC" style="font-family: inria sans;">
+                        </div>
+                        <div class="input-group my-4">
+                            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Contraseña" style="font-family: inria sans;">
+                        </div>
+                        
+                        <div class="flex-column text-center mb-3">
+                            <button class="btn text-light fw-bold w-50" style="font-family: inria sans; background-color: rgb(60, 141, 188);" type="submit">Acceder
+                        </div>
+        
+                    </div>
+                </div>
+
             </div>
-        </div>
+        </form>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
