Solo falta navBar (che cbas pendejo)

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -16,19 +16,19 @@
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item mb-3">
                             <i class="bi bi-person-fill"></i>
-                            <a href="" class="fs-5">Usuarios</a>
+                            <a href="/usu" class="fs-5">Usuarios</a>
                         </li>
                         <li class="nav-item mb-3">
                             <i class="bi bi-file-earmark-fill"></i>
-                            <a href="" class="fs-5">Expedientes</a>
+                            <a href="/ex" class="fs-5">Expedientes</a>
                         </li>
                         <li class="nav-item mb-3">
                             <i class="bi bi-calendar-week-fill"></i>
-                            <a href="" class="fs-5">Citas</a>
+                            <a href="/citas" class="fs-5">Citas</a>
                         </li>
                         <li class="nav-item mb-3">
                             <i class="bi bi-clipboard2-fill"></i>
-                            <a href="" class="fs-5">Recetas</a>
+                            <a href="/rec" class="fs-5">Recetas</a>
                         </li>
                     </ul>
                 </div>
