--- a/templates/app.html
+++ b/templates/app.html
@@ -7,17 +7,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Document</title>
 </head>
-<body style="font-family: inria sans;">
+<body style="font-family: inria sans; background-color: rgb(236, 240, 245);">
     
     {% block sideBar %}
 
     {% endblock %}
 
-    <div>
+    <div class="container position-absolute translate-middle top-50 start-50 ">
 
         {% block content %}
+
+        {% endblock %}
+    </div>
+
+    <div class="">
+        {% block modal%}
 
         {% endblock %}
     </div>
