--- a/templates/vistas/usuariosAdmin.html
+++ b/templates/vistas/usuariosAdmin.html
@@ -1,7 +1,64 @@
-{% extends 'app.html'%}
+{% extends 'sidebar.html' %}
 
 {% block content %}
-        
+
+<div class="my-1 d-flex justify-content-between">
+
+    <div>
+        <i class="bi bi-person-fill" style="font-size: 5vh;"></i>
+        <span class="fs-3 ms-2">Usuarios</span>
+    </div>
+    
+    <div class="">
+        <button type="button" class="btn text-white" data-bs-toggle="modal" data-bs-target="#AgregarUsuario" style="background-color: rgb(102, 174, 84);">
+            Agregar Usuario
+        </button>
+    </div>
+</div>
+
+    <div>
+        <div class="" style="background-color: rgb(60, 141, 188); height:1vh;  border-radius:1vh 1vh 0vh 0vh"></div>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col" class="border border-top-0 border-2 ">RFC</th>
+                    <th scope="col" class="border border-top-0 border-2 ">Nombre Completo</th>
+                    <th scope="col" class="border border-top-0 border-2 ">Cédula</th>
+                    <th scope="col" class="border border-top-0 border-2 ">Correo</th>
+                    <th scope="col" class="border border-top-0 border-2 ">Rol</th>
+                    <th scope="col" class="border border-top-0 border-2 "></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="border border-top-0 border-2 align-middle">
+                    <td>PWOEIRPWIER23123</td>
+                    <td>Emiliano Alexander Pérez San Luis</td>
+                    <td>1982371873123</td>
+                    <td>emiliano@gmail.com</td>
+                    <td>Admin</td>
+                    <td class="text-center">
+                        <div class="dropdown">
+                            <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Opciones</button>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a class="dropdown-item text-primary" href="#" data-bs-toggle="modal" data-bs-target="#EditarUsuario">Editar</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item text-danger" href="#" data-bs-toggle="modal" data-bs-target="#EliminarUsuario">Eliminar</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+{% endblock%}
+
+{% block modal %}
+
+    <!-- Modal Agregar Usuario -->
     <div class="modal fade" id="AgregarUsuario" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-xl">
             <div class="modal-content border-dark border-top-0 border-2">
@@ -46,7 +103,7 @@
                             <div class="input-group ">
                                 
                                 <select class="form-select form-select" aria-label="default select example">
-                                    <option selected> Seleccionar Rol</option>
+                                    <option selected>Seleccionar Rol</option>
                                     <option value="1">Usuario</option>
                                     <option value="2">Administrador</option>
                                 </select>
@@ -67,7 +124,6 @@
         </div>
     </div>
 
-    
     <!-- Modal Editar Usuario -->
     <div class="modal fade" id="EditarUsuario" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-xl">
@@ -134,6 +190,7 @@
         </div>
     </div>
 
+    
     <!-- Modal Eliminar Usuario -->
     <div class="modal fade" id="EliminarUsuario" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered ">
@@ -169,4 +226,5 @@
             </div>
         </div>
     </div>
+
 {% endblock %}
